[package]
name = "ssh-r"
version = "0.1.0"
edition = "2024"
description = "A fast, self-contained, cross-platform SSH launcher with alias-based config"
license = "MIT"
repository = "https://github.com/repasscloud/ssh-r"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"
semver = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
